# devscope

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/devscope/: __init__.py  __main__.py  cli.py
src/devscope/detectors/: docker.py  mcp.py  ports.py  postgres.py  processes.py
src/devscope/modules/: conflicts.py  dashboard.py  db.py  projects.py  scan.py
src/devscope/output/: panels.py  tables.py  theme.py
src/devscope/registry/: auto_detect.py  schema.py  store.py
src/devscope/utils/: errors.py  platform.py  subprocess.py
tests/integration/: test_cli_entrypoint.py
tests/unit/: test_platform.py  test_registry_schema.py
